--- a/resources/sass/sidebar.scss
+++ b/resources/sass/sidebar.scss
@@ -39,6 +39,7 @@
 .side-navigation ul li a {
     display: flex;
     align-items: center;
+    justify-content: center;
     border-radius: 12px;
     text-decoration: none;
     color: #aeb7cb;
@@ -72,15 +73,23 @@
 
 .side-navigation ul li a .side-title {
     opacity: 0;
+    max-width: 0;
+    overflow: hidden;
     transform: translateX(10px);
     transition: all 0.22s ease;
     white-space: nowrap;
     color: #d7deed;
 }
 
+.side-navigation:hover ul li a,
+.side-navigation.side-expanded ul li a {
+    justify-content: flex-start;
+}
+
 .side-navigation:hover ul li a .side-title,
 .side-navigation.side-expanded ul li a .side-title {
     opacity: 1;
+    max-width: 170px;
     transform: translateX(0);
 }
 
